# fskit-s3

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  compose.yaml  project.yml
.github/workflows/: ci.yml
app/: Cargo.toml  build.rs
app/src/: addwindow.rs  appkit.rs  autostart.rs  connection.rs  devlog.rs  disksecret.rs  ffi.rs  health.rs  healthwindow.rs  keychain.rs  lib.rs  main.rs  mounts.rs  s3check.rs
backend/: Cargo.toml
backend-s3/: Cargo.toml
backend-s3/src/: lib.rs  s3.rs  sigv4.rs
backend/src/: lib.rs
backend/tests/: live_s3.rs
bundle/: App-Info.plist  Extension-Info.plist  Extension.entitlements  Makefile
core/: Cargo.toml
core/src/: lib.rs  mem.rs  path.rs
ext/: Cargo.toml  build.rs
ext/src/: item.rs  junk.rs  lib.rs  oslog.rs  sys.rs  volume.rs
manage/: Cargo.toml
manage/src/: connection.rs  lib.rs  mount.rs
menubar/: Cargo.toml
menubar/src/: main.rs  mounts.rs
scripts/: build-app-staticlib.sh  build-ext-staticlib.sh  dev-app.sh  e2e-mount.sh  git-sha.sh  stamp-git-sha.sh
uniffi-bindgen/: Cargo.toml  main.rs
xcode/: App.entitlements  Extension-Bridging-Header.h  Extension-Info.plist  Extension.entitlements  FileSystemExtension.swift  README.md
xcode/host/: App.swift  ConnectionForm.swift  Connections.swift  FskitS3HostApp.swift  Health.swift  Host-Bridging-Header.h  Support.swift  main.swift
xcode/host/fskit-s3.icon/: icon.json
