[workspace]
resolver = "2"
# ext is added back once the FSKit bindings compile (it links Apple frameworks
# and only yields a loadable module as a codesigned .appex). core + backend build
# and test on any host.
members = ["core", "backend", "menubar"]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/lucsoft/fskit-s3"

[workspace.dependencies]
fskit-s3-core = { path = "core" }
fskit-s3-backend = { path = "backend" }
