[package]
name = "fskit-s3-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true

# The fskit-s3 macOS app: a status-bar app that manages connections and mounts.
# It owns both the connection/mount logic (the pure, unit-tested `connection` +
# `mounts` modules) and the AppKit UI on top (driven via objc2, with every FFI
# call confined to `appkit.rs`). There is no bespoke CLI — a connection is
# realised by the system `mount` tool with its config as `-o` options.
[[bin]]
name = "fskit-s3-app"
path = "src/main.rs"

[dependencies]
# Connection persistence: the app-local connections.json (never holds secrets).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Endpoint URL validation in the Add-mount form.
url = "2"

# Keychain: stores the S3 secret (optionally in a shared access group the ext reads).
security-framework = "3"

# "Test and Save": validate S3 credentials by listing the bucket via OpenDAL.
fskit-s3-core = { workspace = true }
fskit-s3-backend = { workspace = true }
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread"] }

# The objc2 crates gate every class behind a like-named feature, and their
# `default` turns the *whole* framework on. We disable defaults and re-enable only
# what this app touches — a much smaller compile surface, and a precise record of
# what the app actually depends on.

# objc2 core: `define_class!`, `msg_send!`, `Retained`, `MainThreadMarker`. The
# only default feature is `std`, which we keep.
objc2 = { version = "0.6", default-features = false, features = ["std"] }

# Foundation: NSString bridging + NSGeometry (NSRect/NSPoint/NSSize for control frames).
objc2-foundation = { version = "0.3", default-features = false, features = [
    "std",
    "NSString",
    "NSGeometry",
] }

# AppKit: just the status-bar menu classes. objc2 gates each type/method behind
# `cfg(all(feature = "Self", feature = "Super", …))`, so besides the classes we
# name we must also enable their whole superclass chain and the CGFloat support.
objc2-app-kit = { version = "0.3", default-features = false, features = [
    "std",
    # CGFloat-typed APIs: statusItemWithLength + NSVariableStatusItemLength.
    "objc2-core-foundation",
    # Classes we use directly:
    "NSApplication",        # the app object (setActivationPolicy)
    "NSRunningApplication", # defines NSApplicationActivationPolicy (Accessory)
    "NSMenu",               # the dropdown
    "NSMenuItem",           # its rows (+ separators)
    "NSStatusBar",          # systemStatusBar() + NSVariableStatusItemLength
    "NSStatusItem",         # the menu-bar item (statusItemWithLength / setMenu)
    "NSStatusBarButton",    # the status button; setTitle draws the ☁ glyph
    # The Add-mount window + its form controls:
    "NSWindow",             # the form window
    "NSGraphics",           # NSBackingStoreType (window initializer)
    "NSTextField",          # labels + editable fields
    "NSSecureTextField",    # the secret field (bullets)
    "NSPopUpButton",        # the In-memory/S3 type selector
    "NSCell",               # NSControlStateValue{On,Off} for checkbox state
    "NSColor",              # systemRed bezel for the destructive Delete button
    "NSAlert",              # the "delete this connection?" confirmation
    "NSParagraphStyle",     # NSLineBreakMode + setLineBreakMode (wrapping status label)
    # Superclass chain the above are gated on (NSStatusBarButton → NSButton →
    # NSControl → NSView → NSResponder; NSApplication/NSWindow → NSResponder):
    "NSButton",
    "NSControl",
    "NSView",
    "NSResponder",
] }
