[package]
name = "fskit-s3-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true

# The logic + Rust↔Swift contract behind the fskit-s3 macOS app. It owns the
# connection/mount logic (the pure, unit-tested `connection` + `mounts` modules),
# the Keychain/health/autostart bits, and exposes them to the SwiftUI UI through a
# UniFFI contract (`ffi.rs`). No CLI, no AppKit UI — a connection is realised by the
# system `mount` tool, and the UI lives in `xcode/host/*.swift`.
[lib]
name = "fskit_s3_app"
path = "src/lib.rs"
# `staticlib` is what the Xcode host target links; `cdylib` exists only so
# `uniffi-bindgen` can read the contract's metadata back out of a built dynamic
# library (library-mode generation). The bundle never ships the dylib.
crate-type = ["staticlib", "cdylib"]

[dependencies]
# Connection persistence: the app-local connections.json (never holds secrets).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Endpoint URL validation in the connection form.
url = "2"

# Keychain: stores the S3 secret (optionally in a shared access group the ext reads).
security-framework = "3"

# "Test and Save": validate S3 credentials by listing the bucket via OpenDAL.
fskit-s3-core = { workspace = true }
fskit-s3-backend = { workspace = true }
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread"] }

# UniFFI: the typed Rust↔Swift contract. The `#[uniffi::export]` functions +
# `#[derive(uniffi::Record/Enum/Error)]` types in `ffi.rs` compile a scaffolding
# into this library; `uniffi-bindgen` (the sibling crate) reads it and emits the
# Swift bindings the SwiftUI app calls. Proc-macro-only mode — no UDL, no build.rs.
uniffi = { workspace = true }

# objc2 core: `class!`, `msg_send!`, `Retained` — used by `health` (FSClient) and
# `autostart` (SMAppService). Both classes are looked up at runtime via `class!`, so
# no objc2 *framework* crate is needed; the frameworks are linked by the Xcode target.
objc2 = { version = "0.6", default-features = false, features = ["std"] }

# `RcBlock` — the FSKit `FSClient` health query takes an ObjC completion block
# (`void(^)(NSArray*, NSError*)`). `std` is block2's default.
block2 = { version = "0.6", default-features = false, features = ["std"] }

# Foundation: just `NSString` bridging, for reading strings out of the FSClient
# reply and the bundle Info.plist in `health`.
objc2-foundation = { version = "0.3", default-features = false, features = [
    "std",
    "NSString",
] }
