[package]
name = "fskit-s3-ext"
version = "0.1.0"
edition.workspace = true
license.workspace = true

# The FSKit extension logic, in Rust. Defines the FSUnaryFileSystem / FSVolume /
# FSItem subclasses via objc2 and delegates every operation to a StorageBackend.
# Built as a `staticlib` and linked into an Xcode-managed .appex (which handles
# the extension-point plumbing, entitlements, and signing). The Swift @main
# bootstrap calls `fskit_s3_make_filesystem` to get our Rust FSUnaryFileSystem.
[lib]
name = "fskit_s3_ext"
crate-type = ["staticlib"]

[dependencies]
fskit-s3-core = { workspace = true, features = ["mem"] }
# The S3 backend (OpenDAL/reqwest/rustls). Linking this into the staticlib pulls
# in Security.framework + SystemConfiguration.framework on the Xcode side — see
# project.yml. The demo in-memory backend is still the fallback for `memory`.
fskit-s3-backend = { workspace = true }
# Reads the S3 secret from the shared Keychain access group (see Extension.entitlements).
security-framework = "3"
# The multi-threaded runtime the ext spawns backend futures on. tokio has no
# default features, so `rt-multi-thread` (which pulls in `rt`) is the whole ask.
tokio = { version = "1", default-features = false, features = ["rt-multi-thread"] }
# objc2 core: extern_class!/extern_protocol!/define_class!, msg_send!, Retained.
# `std` is objc2's only default feature.
objc2 = { version = "0.6", default-features = false, features = ["std"] }
# Foundation types the FSKit bindings pass around.
objc2-foundation = { version = "0.3", default-features = false, features = [
    "std",
    "NSString",     # FSFileName / names + volume label
    "NSData",       # icon/buffer payloads across the FSKit boundary
    "NSError",      # error replies to FSKit
    "NSUUID",       # container + volume identifiers
    "NSURL",        # FSPathURLResource.url — the source path, read at loadResource
    # NSError::errorWithDomain:code:userInfo: is gated on the Foundation `NSObject`
    # category and takes an NSDictionary userInfo, so both are required to build it.
    "NSObject",
    "NSDictionary",
    "NSArray", # FSTaskOptions.taskOptions returns NSArray<NSString> (the -o tokens)
] }
# `DynBlock` — FSKit's reply handlers are ObjC blocks. `std` is block2's default.
block2 = { version = "0.6", default-features = false, features = ["std"] }
libc = "0.2"
